diesel_compile_tests/tests/fail/insert_requires_value_of_same_type_as_column.stderr
error[E0277]: the trait bound `{integer}: AsExpression<diesel::sql_types::Text>` is not satisfied
  --> tests/fail/insert_requires_value_of_same_type_as_column.rs:18:37
   |
LL |     insert_into(users).values(&name.eq(1));
   |                                     ^^ the trait `AsExpression<diesel::sql_types::Text>` is not implemented for `{integer}`
   |
   = help: the following other types implement trait `AsExpression<T>`:
             `&f32` implements `AsExpression<diesel::sql_types::Float>`
             `&f64` implements `AsExpression<diesel::sql_types::Double>`
             `&i16` implements `AsExpression<diesel::sql_types::SmallInt>`
             `&i32` implements `AsExpression<diesel::sql_types::Integer>`
             `&i64` implements `AsExpression<diesel::sql_types::BigInt>`
             `&i8` implements `AsExpression<TinyInt>`
             `&u16` implements `AsExpression<Unsigned<SmallInt>>`
             `&u32` implements `AsExpression<Oid>`
           and N others

   For more information about this error, try `rustc --explain E0277`.
